--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -43,7 +43,7 @@
             Documentation
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarRules">
-            <a class="dropdown-item" routerLink="#">Generate Config Doc</a>
+            <a class="dropdown-item" routerLink="/generate-doc">Generate Config Doc</a>
           </div>
         </li>
       </ul>
