--- a/src/app/generate-doc/generate-doc.component.html
+++ b/src/app/generate-doc/generate-doc.component.html
@@ -1,15 +1,21 @@
 <nav aria-label="breadcrumb">
   <ol class="breadcrumb">
-    <li class="breadcrumb-item"><a routerLink="/duplicate-account">Home</a></li>
-    <li class="breadcrumb-item active" aria-current="page">Generate Document</li>
+    <li class="breadcrumb-item"><a routerLink="/multiple-account">Home</a></li>
+    <li class="breadcrumb-item active" aria-current="page">Generate Documents</li>
   </ol>
 </nav>
-
+<div class="form-group row" *ngIf="isProcessingDocGeneration()">
+  <div class="col-sm-12 text-right">
+    <span class="spinner-border spinner-border-sm mr-1"></span>Loading...
+  </div>
+</div>
 <div class="form-group row">
   <div class="col-sm-12 text-left">
-    <span class="font-weight-bold">Click 'Generate Document' button below to generate the document.</span>
-    </div>
+    <span class="font-weight-bold">- Select checkbox on table header to generate and download all documents</span>
+    <br/><span class="font-weight-bold">- Select individual checkbox on each row to generate and download one or multiple documents</span>
+  </div>
 </div>
+<!--
 <div class="form-group row">
   <div class="col-sm-12 text-left">
     <button type="button" [disabled]="isProcessingDocGeneration()" (click)="submitGenDocTask()" class="btn btn-info btn-sm">
@@ -22,3 +28,42 @@
     <span class="spinner-border spinner-border-sm mr-1"></span>Generating Document...
   </div>
 </div>
+-->
+<table class="table table-striped table-bordered">
+  <thead class="thead-light">
+    <tr>
+      <th scope="col">
+          <input type="checkbox" id="selectAll">
+      </th>
+      <th scope="col">Name</th>
+      <th scope="col">Description</th>
+      <th scope="col">Status</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>
+        <input type="checkbox">
+      </td>
+      <td>Sources</td>
+      <td>Description</td>
+      <td>Gathering data...</td>
+    </tr>
+    <tr>
+      <td>
+        <input type="checkbox">
+      </td>
+      <td>Rules</td>
+      <td>Description</td>
+      <td>Gathering data...</td>
+    </tr>
+    <tr>
+      <td>
+        <input type="checkbox">
+      </td>
+      <td>Transforms</td>
+      <td>Description</td>
+      <td>Gathering data...</td>
+    </tr>
+  </tbody>
+</table>
