--- a/src/app/generate-doc/generate-doc.component.html
+++ b/src/app/generate-doc/generate-doc.component.html
@@ -13,8 +13,8 @@
 -->
 <div class="form-group row">
   <div class="col-sm-12 text-left">
-    <span class="font-weight-bold">- Select checkbox on table header to generate and download all documents</span>
-    <br/><span class="font-weight-bold">- Select individual checkbox on each row to generate and download one or multiple documents</span>
+    <span class="font-weight-bold">- Select "Select All" checkbox and click "Generate" button to generate all documents</span>
+    <br/><span class="font-weight-bold">- Select individual checkbox on each row and click "Generate" button to generate one or multiple documents</span>
   </div>
 </div>
 
