--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -73,7 +73,7 @@
 <div class="container">
   <nav class="navbar navbar-custom navbar-expand-lg">
     <div class="col-sm-12 text-center text-white">
-      <small>@Copyright 2021 SailPoint Technologies - All rights reserved.</small>
+      <small>@Copyright {{ currentYear }} SailPoint Technologies - All rights reserved.</small>
     </div>
   </nav>
   <br>
