--- a/src/app/generate-doc/generate-doc.component.html
+++ b/src/app/generate-doc/generate-doc.component.html
@@ -13,26 +13,33 @@
 -->
 <div class="form-group row">
   <div class="col-sm-12 text-left">
-    <span class="font-weight-bold">Select "All" checkbox to generate a full document or select individual checkbox to generate specific document</span>
+    <span class="font-weight-bold">Select "All" checkbox to generate a full document or select individual checkbox(s) to generate a partial document</span>
   </div>
 </div>
 
-<!--
-<div class="form-group row">
+
+<!--div class="form-group row">
   <div class="col-sm-12 text-left">
     <button type="button" [disabled]="isProcessingDocGeneration()" (click)="submitGenDocTask()" class="btn btn-info btn-sm">
       Generate
     </button>
   </div>
+</div-->
+
+<div class="form-group row">
+  <div class="col-sm-12 text-left">
+    <button type="button" [disabled]="!readyForGenerate" (click)="submitGenDocTask()" class="btn btn-info btn-sm">
+      Generate
+    </button>
+  </div>
 </div>
--->
-<!--
+
 <div class="form-group row" *ngIf="isProcessingDocGeneration()">
   <div class="col-sm-12 text-left">
     <span class="spinner-border spinner-border-sm mr-1"></span>Generating Document...
   </div>
 </div>
--->
+
 
 <table class="table table-striped table-bordered">
   <thead class="thead-light">
@@ -47,7 +54,7 @@
       <th scope="col">&nbsp;</th>
       <th scope="col">Type</th>
       <th scope="col">Description</th>
-      <th scope="col">Action</th>
+      <!--th scope="col">Status</th-->
     </tr>
   </thead>
   <tbody *ngIf="documentItems">
@@ -69,7 +76,7 @@
         </div>
       </td>
       -->
-      <td>
+      <!--td>
         <div class="form-group row" *ngIf="di.selected && isProcessingDocGeneration()">
           <div class="col-sm-12 text-left">
             <span class="spinner-border spinner-border-sm mr-1"></span>Generating...
@@ -82,7 +89,7 @@
             </button>
           </div>
         </div>
-      </td>
+      </td-->
     </tr>
   </tbody>
 </table>
