--- a/src/app/generate-doc/generate-doc.component.html
+++ b/src/app/generate-doc/generate-doc.component.html
@@ -13,7 +13,7 @@
 -->
 <div class="form-group row">
   <div class="col-sm-12 text-left">
-    <span class="font-weight-bold">Select "All" checkbox to generate a full document or select individual checkbox(s) to generate a partial document</span>
+    <span class="font-weight-bold">Select "All" checkbox to generate a full document or select individual checkbox(es) to generate a partial document</span>
   </div>
 </div>
 
