--- a/src/app/generate-doc/generate-doc.component.html
+++ b/src/app/generate-doc/generate-doc.component.html
@@ -28,17 +28,17 @@
 
 <div class="form-group row">
   <div class="col-sm-12 text-left">
-    <button type="button" [disabled]="!readyForGenerate" (click)="submitGenDocTask()" class="btn btn-info btn-sm">
-      Generate
-    </button>
+    <button type="button" [disabled]="!readyForGenerate" (click)="submitGenDocTask()" class="btn btn-info btn-sm">Generate</button>
+    &nbsp;<span *ngIf="isProcessingDocGeneration()" class="spinner-border spinner-border-sm mr-1"></span>
+    &nbsp;<span *ngIf="isProcessingDocGeneration()">Generating Document...</span>
   </div>
 </div>
 
-<div class="form-group row" *ngIf="isProcessingDocGeneration()">
+<!--div class="form-group row" *ngIf="isProcessingDocGeneration()">
   <div class="col-sm-12 text-left">
     <span class="spinner-border spinner-border-sm mr-1"></span>Generating Document...
   </div>
-</div>
+</div-->
 
 
 <table class="table table-striped table-bordered">
