--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -64,6 +64,7 @@
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarRules">
             <a class="dropdown-item" routerLink="/org-time-update">Set Org Time</a>
+            <a class="dropdown-item" routerLink="/org-config-export">Export Org Config</a>
           </div>
         </li>
         <li class="nav-item dropdown">
